# docsy

./: .gitignore  LICENSE  README.md  docker-compose.yaml  docsy.json  justfile  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: build_image.yaml  test.yaml
app/: admin.py  custom_errors.py  models.py  urls.py
app/migrations/: 0004_analysis_status.py  0005_remove_analysis_analysis_result_analysis_result.py
app/services/: ai_service.py  analysis_service.py  local_repo_service.py  markdown_file_service.py  repo_map_service.py
app/templates/: base.html
app/templates/analysis/: create.html  result.html
app/views/: __init__.py  analysis_view.py  analyze_views.py
backend/: .dockerignore  Dockerfile  build.sh  justfile  pyproject.toml
backend/src/: manage.py
backend/src/app/: admin.py  models.py  sanitization_utils.py  serializers.py  urls.py
backend/src/app/api/: __init__.py  github.py
backend/src/app/migrations/: 0001_initial.py  0002_repo_is_public_analysis.py  0003_rename_github_full_name_repo_nfkc_clone_url_and_more.py  0006_remove_analysis_status.py  0007_repomap.py  0008_repo_app_installation_id_and_more.py  0009_remove_repo_app_installation_id.py  0010_target.py  0011_remove_target_name_remove_target_sections_and_more.py  0012_remove_target_repo_remove_target_user.py  0013_template.py  0014_alter_template_structure.py
backend/src/app/services/: ai_service.py  analysis_service.py  github_auth_service.py  local_repo_service.py  pull_request_service.py  remote_repo_service.py  repo_map_service.py  repository_service.py  target_service.py  template_service.py
backend/src/app/services/analysis/: __init__.py  coherent_sitemap_analysis_service.py  first_page_analysis_service.py  single_function_analysis_service.py  style_analysis_service.py  test_vale.py  vale.py  vale_analysis_service.py
backend/src/app/templates/: analysis.html  analysis_result.html  analysis_results.html  base.html  dashboard.html  fine_tuning.html  integrate.html  integrations.html  plausible.html  repositories.html  target.html  target_details.html  targets.html  template.html  template_details.html  templates.html
backend/src/app/templates/analysis/: create.html  result.html
backend/src/app/templates/registration/: login.html
backend/src/app/views/: __init__.py  analysis_result_view.py  analysis_results_view.py  analysis_view.py  dashboard_view.py  fine_tuning_view.py  integrate_view.py  integrations_view.py  repo_view.py  repositories_view.py  target_details_view.py  target_view.py  targets_view.py  template_details_view.py  template_view.py  templates_view.py
backend/src/data/: README.md
backend/src/docsy/: api.py  asgi.py  settings.py  urls.py
backend/src/tests/: conftest.py  test_settings.py  test_simple.py
backend/src/tests/services/: test_local_repo_service.py
backend/src/tests/services/analysis/: test_vale.py
docsy/: settings.py  urls.py  wsgi.py
src/: config.ts  index.ts  init.ts  settings.ts  suggest.ts
src/spec/: config.ts  suggestion.ts
src/suggest/: index.ts
src/utils/: docsyrepo.ts  git.ts
