[tool.poetry]
name = "docsy"
version = "0.1.0"
description = "Docsy suggests changes to your user documentation."
authors = ["Felix Zieger <67903933+felixzieger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
pygithub = "^2.5.0"
gitpython = "^3.1.43"
openai = "^1.54.3"
python-frontmatter = "^1.1.0"
daphne = "^4.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pyright = "^1.1.389"
pytest-asyncio = "^0.24.0"

[tool.ruff]
fix = true
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
exclude = ["**/migrations"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
