[tool.ruff]
fix = true
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
exclude = ["**/migrations"]


[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.7.3",
    "pyright<2.0.0,>=1.1.389",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Felix Zieger", email = "67903933+felixzieger@users.noreply.github.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "django<6.0.0,>=5.1.3",
    "pygithub<3.0.0,>=2.5.0",
    "gitpython<4.0.0,>=3.1.43",
    "openai<2.0.0,>=1.54.3",
    "python-frontmatter<2.0.0,>=1.1.0",
    "daphne<5.0.0,>=4.1.2",
    "django-ninja<2.0.0,>=1.3.0",
    "servestatic[brotli]<3.0.0,>=2.1.1",
    "docutils>=0.21.2",
]
name = "docsy"
version = "0.1.0"
description = "Docsy suggests changes to your user documentation."
